2004-08-19 Ian Rutt
 * Moved PDD and precip forcing parameters into the namelist, and slightly
   reorganized glimmer_paramets.f90 and glimmer_physcon.f90. Would like to
   get rid of both these files eventually.

2004-08-18 Magnus Hagdorn
 * Brown Paper Back: only applied half the patch to glimmer_thck.f90
   derivatives should be devided by 2*grid_length rather than multiplied

2004-08-18 Ian Rutt
 * Formatting and documentation of glimmer_thck.f90
 * Changes to g_land.gln to be compatible with changes to option handling
 * Added upper-surface calculation after isostasy calc

2004-08-17 Ian Rutt
 * Added unrecognised option handling for whichevol and whichwvel
 * Improved formatting of line numbers in glide_messages.f90
 * Reformatted glimmer_thck.f90

2004-08-16 Ian Rutt
 * Tidied up unrecognised option handling in a few places
 * Minor formatting changes
 * Removed unused option whichstrs

2004-08-13 Ian Rutt
 * Updated documentation a little
 * Minor formatting changes
 * Changes to some constants to conform with EISMINT-1. These should be
   moved to the configuration files at some point.
 
2004-08-13 Magnus Hagdorn
 * fixed bug in glimmer_thck.f90: size of opvrew,opvrns is different from ipvr so where
   construct cannot be used
 * fixed bug in glimmer_velo.f90: last row/column of calculations was missed
 * fixed bug where constant was only set on first pass (glimmer_temp.f90, glimmer_modu.f90)
 * fixed bug in glide_pdd.f90: sp is already loaded
	
2004-08-12 Ian Rutt
 * Added comments to several files: glide_pdd.f90, glimmer_CFproj.f90,
   glimmer_config.f90, glimmer_example.f90.
 * Corrected passing of temperature range within model - should be the
   half-range, so divided range by two in glimmer.f90

2004-08-10 Ian Rutt
 * Updated top-level information files
 * Cleared out unneccessary variables and things from makefile.arc files

2004-08-04 Ian Rutt
 * Completed new PDD code, with Romberg integration from a